@@ -44,8 +44,13 @@ jobs:
       - name: Build example_null (extra warnings)
         run: mingw32-make -C examples/example_null EXTRA_WARNINGS=1
 
-      - name: Build example_null (unity build)
-        run: mingw32-make -C examples/example_null UNITY_BUILD=1
+      - name: Build example_null (single file build)
+        shell: bash
+        run: |
+          echo '#define IMGUI_IMPLEMENTATION'                    >> example_single_file.cpp
+          echo '#include "misc/single_file/imgui_single_file.h"' >> example_single_file.cpp
+          echo '#include "examples/example_null/main.cpp"'       >> example_single_file.cpp
+          g++ -I. -Wall -Wformat -o example_single_file.exe example_single_file.cpp
 
       - name: Build Win32 example_glfw_opengl2
         shell: cmd
@@ -176,8 +181,12 @@ jobs:
         make -C examples/example_null clean
         CXXFLAGS="$CXXFLAGS -m64" CXX=clang++ make -C examples/example_null EXTRA_WARNINGS=1
 
-    - name: Build example_null (unity build)
-      run: make -C examples/example_null UNITY_BUILD=1
+    - name: Build example_null (single file build)
+      run: |
+        echo '#define IMGUI_IMPLEMENTATION'                    >> example_single_file.cpp
+        echo '#include "misc/single_file/imgui_single_file.h"' >> example_single_file.cpp
+        echo '#include "examples/example_null/main.cpp"'       >> example_single_file.cpp
+        g++ -I. -Wall -Wformat -o example_single_file example_single_file.cpp
 
     - name: Build example_glfw_opengl2
       run: make -C examples/example_glfw_opengl2
@@ -208,8 +217,12 @@ jobs:
     - name: Build example_null (extra warnings)
       run: make -C examples/example_null EXTRA_WARNINGS=1
 
-    - name: Build example_null (unity build)
-      run: make -C examples/example_null UNITY_BUILD=1
+    - name: Build example_null (single file build)
+      run: |
+        echo '#define IMGUI_IMPLEMENTATION'                    >> example_single_file.cpp
+        echo '#include "misc/single_file/imgui_single_file.h"' >> example_single_file.cpp
+        echo '#include "examples/example_null/main.cpp"'       >> example_single_file.cpp
+        clang++ -I. -Wall -Wformat -o example_single_file example_single_file.cpp
 
     - name: Build example_glfw_opengl2
       run: make -C examples/example_glfw_opengl2
