@@ -1,6 +1,0 @@
-// Unity build test - build this example as a single compilation unit.
-#include "main.cpp"
-#include "../../imgui.cpp"
-#include "../../imgui_demo.cpp"
-#include "../../imgui_draw.cpp"
-#include "../../imgui_widgets.cpp"
